card header alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,11 @@
 }
 
 html {
-  background-color: #f2f4f5;
+  background-color: #fff;
   height: 100%;
 }
 .App {
-  background-color: #f2f4f5;
+  background-color: #fff;
   background-size: cover;
   height: 100%;
 }
